--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <!--cdn for css style-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
+
     <title>Taskmaster Pro</title>
   </head>
 
@@ -51,10 +57,8 @@
             <div class="card">
               <h4 class="card-header bg-dark text-light">To Do</h4>
               <ul id="list-todo" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in progress</p>
-                </li>
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task in progress</p>
               </ul>
             </div>
           </div>
@@ -64,10 +68,8 @@
             <div class="card">
               <h4 class="card-header bg-dark text-light">In Progress</h4>
               <ul id="list-inProgress" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in progress</p>
-                </li>
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task in progress</p>
               </ul>
             </div>
           </div>
@@ -77,10 +79,8 @@
             <div class="card">
               <h4 class="card-header bg-dark text-light">In Review</h4>
               <ul id="list-inReview" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in review</p>
-                </li>
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task in review</p>
               </ul>
             </div>
           </div>
@@ -90,10 +90,8 @@
             <div class="card">
               <h4 class="card-header bg-dark text-light">Done</h4>
               <ul id="list-done" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in review</p>
-                </li>
+                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                <p class="m-1">Sample task in review</p>
               </ul>
             </div>
           </div>
@@ -166,6 +164,9 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!--cdn for jquery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="./assets/js/script.js"></script>
