add date picker with momentjs

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         "
       >
         <h1 class="text-center">Taskmaster Pro Edition</h1>
+
         <button
           id="create-task"
           class="btn btn-block btn-success"
@@ -51,7 +52,7 @@
         </p>
       </header>
       <main class="col-12 col-lg-9 d-flex flex-column">
-        <div class="m-5 row justify-content-around">
+        <div class="m-5 row justify-content- around">
           <!-- todo start -->
           <div class="col-12 col-md-6 col-xl-3 mb-3">
             <div class="card">
@@ -169,6 +170,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!--moment.js cdn-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
